<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/green"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/bill_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:text="R$ 2.300,10"/>
        <TextView
            android:id="@+id/bill_due_date"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:text="@string/expiration"/>
        <TextView
            android:id="@+id/bill_message"
            android:layout_marginTop="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:text="@string/close_date"/>
    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp"
            android:background="@android:color/white">
            <LinearLayout
                android:id="@+id/paid_block"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_scrollFlags="scroll|enterAlways">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/green"
                    android:text="@string/payment_received"/>
                <TextView
                    android:id="@+id/paid_value"
                    android:layout_marginTop="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:text="R$ 1.350,45"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/closed_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical"
                app:layout_scrollFlags="scroll|enterAlways">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/main_text_color"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:text="@string/spent_in_month"/>
                    <TextView
                        android:id="@+id/value_spent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/main_text_color"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="R$ 3.398,44"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/past_balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/main_text_color"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:text="@string/no_paid_value"/>
                    <TextView
                        android:id="@+id/value_no_paid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/main_text_color"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="R$ 271,78"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/interest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/main_text_color"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:text="@string/interest_rate"/>
                    <TextView
                        android:id="@+id/value_interest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/main_text_color"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="R$ 14,23"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_generate_billet"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_margin="20dp"
                android:textColor="@color/red"
                android:background="@drawable/btn_red"
                android:text="@string/generate_billet"
                android:textSize="18sp"
                app:layout_scrollFlags="scroll|enterAlways"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/line_item">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@android:color/black"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/from_to_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:textColor="@color/line_color"
                        android:textSize="11sp"
                        android:text="De 31 JAN até 29 FEV"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:textSize="11sp"
                        android:textColor="@color/line_color"
                        android:text="@string/currency_values"/>
                </LinearLayout>
            </LinearLayout>


        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>


</LinearLayout>