<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tab_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginBottom="-20dp"
        android:text="FEV"/>
    <LinearLayout
        android:id="@+id/tab_arrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/triangle_red"/>


</LinearLayout>